--- a/app/views/incidents/locator.html.erb
+++ b/app/views/incidents/locator.html.erb
@@ -4,83 +4,56 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	<title>SirenSpotter</title>
+	<title>Siren Spotter</title>
 	<%= javascript_include_tag 'prototype' %>  
+	<script src="http://marksilver.net/geo_js/geo.js" type="text/javascript" charset="utf-8"></script>
 </head>
 
-<body>
-<div id="loader">
-	<div class="loader">
+<body onload="initialize();">
+  <div id="current" class="default">
     <p>Determining your location (click "OK" if you are prompted).</p>
-
-    Nothing happen? Enter a street address, intersection, or ZIP code:
-    <% form_tag(incidents_path, :method => :get) do -%>
-      <%= text_field_tag :address %>
-      <%= submit_tag 'Show Sirens' %>
-    <% end -%>
+		<noscript><span class="error">Please enable Javascript and refresh your browser</strong></noscript>
 	</div>
-</div>
+	
+	<div id="content"></div>
+	
+  Nothing happen? Enter a street address, intersection, or ZIP code:
+  <% form_tag(incidents_path, :method => :get) do -%>
+    <%= text_field_tag :address %>
+    <%= submit_tag 'Show Sirens' %>
+  <% end -%>
 
 <script type="text/javascript" language="Javascript">
 
-//loaderContainer = document.getElementById("loader");
-function createMap(position){
-  alert('woot2');
-
-//  window.location.href = '/incidents?lat=' + position.coords.latitude + '&lng=' + position.coords.longitude;
-//	loaderContainer.getElementsByTagName("p")[0].textContent = "Browser does not support geolocation";
-//	loaderContainer.style.display = "none";
-//	mapInstance.setCenter(currentLatLng, 15);
-//	mapInstance.addOverlay(locationMarker);
-//	locationMarker.openInfoWindow("<h3>Your location</h3>");
-	
-	// Inital location found create a watchPosition instance for continuous updates
-//	coordsListener = navigator.geolocation.watchPosition(updateLocation, handleError);
-};
-
-// Error handlers
-//function failedError(error){
-//  alert('woot3');
-  
-	//Failed to find any location, fallback to Apple HQ
-	
-//	failedLatLng = new CM.LatLng(37.331689,-122.030731);
-//	loaderContainer.getElementsByTagName("p")[0].textContent = "Error performing location";
-//};
-
-function handleError(error){
-  alert('woot');
-//	if(error.code === 1) {
-		//Location services is either disabled or you denied access to your position
-//		failedError();
-//	}// else {
-//	  loaderContainer.getElementsByTagName("p")[0].textContent = "Other error";
-		//Current location could not be determined, falling back to last known within 10 minutes
-	//	navigator.geolocation.getCurrentPosition(cacheLocation, cacheError, {maximumAge:600000, timeout:0});
-	//}
-	
-//	loaderContainer.style.display = "none";
-};
-
-function mapSetup() { 
-  # http://www.slideshare.net/aizatto/location-aware-browsing-4804874
-	if(navigator.geolocation) {
-		// Get current position
-		navigator.geolocation.getCurrentPosition(function(position) {
-		  alert('called');
-		  //window.location.href = '/incidents?lat=' + position.coords.latitude + '&lng=' + position.coords.longitude;
-		}, function(error) {
-		  alert('error');
-		}); // Request live position
-		//navigator.geolocation.watchPosition(createMap, handleError); // Request live position
-		
-    //alert('after');
-	} else {
-		//loaderContainer.getElementsByTagName("p")[0].textContent = "Browser does not support geolocation";
-		//window.setTimeout(failedError, 1000);
-		alert('ble');
+function initialize()
+{
+	if(geo_position_js.init())
+	{
+		document.getElementById('current').innerHTML="Receiving...";
+		geo_position_js.getCurrentPosition(show_position,function(){document.getElementById('current').innerHTML="Couldn't get location"},{enableHighAccuracy:true});
 	}
-};
+	else
+	{
+		document.getElementById('current').innerHTML="HTML5 Geolocation functionality not available in your browser.";
+		document.getElementById('current').className="error";
+	}
+}
 
-mapSetup();
+
+function show_position(p)
+{
+	document.getElementById('current').innerHTML="<strong>Location identified.</strong> Accuracy: " + p.coords.accuracy;
+//	var pos=new google.maps.LatLng(p.coords.latitude,p.coords.longitude);
+//  window.location.href = '/incidents?lat=' + position.coords.latitude + '&lng=' + position.coords.longitude;
+	document.getElementById('content').innerHTML = "<div id='information'>Latitude: " + p.coords.latitude 
+											+ "<br />Longitude: " + p.coords.longitude 
+											+ "<br />Altitude (Accuracy): " + p.coords.altitude + "(" + p.coords.altitudeAccuracy + ")" 
+											+ "<br />Speed/Heading: " + p.coords.speed + "/" + p.coords.heading
+											+ "<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></div>";
+
+}
 </script>
+
+
+</body>
+</html>
