--- a/app/views/incidents/locator.html.erb
+++ b/app/views/incidents/locator.html.erb
@@ -29,7 +29,7 @@ function initialize()
 {
 	if(geo_position_js.init())
 	{
-		document.getElementById('current').innerHTML="Receiving...";
+		document.getElementById('current').innerHTML="Obtaining location, please wait...";
 		geo_position_js.getCurrentPosition(show_position,function(){document.getElementById('current').innerHTML="Couldn't get location"},{enableHighAccuracy:true});
 	}
 	else
@@ -44,13 +44,13 @@ function show_position(p)
 {
 	document.getElementById('current').innerHTML="<strong>Location identified.</strong> Accuracy: " + p.coords.accuracy;
 //	var pos=new google.maps.LatLng(p.coords.latitude,p.coords.longitude);
-//  window.location.href = '/incidents?lat=' + position.coords.latitude + '&lng=' + position.coords.longitude;
 	document.getElementById('content').innerHTML = "<div id='information'>Latitude: " + p.coords.latitude 
 											+ "<br />Longitude: " + p.coords.longitude 
 											+ "<br />Altitude (Accuracy): " + p.coords.altitude + "(" + p.coords.altitudeAccuracy + ")" 
 											+ "<br />Speed/Heading: " + p.coords.speed + "/" + p.coords.heading
 											+ "<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></div>";
 
+  window.location.href = '/incidents?lat=' + position.coords.latitude + '&lng=' + position.coords.longitude;
 }
 </script>
 
