--- a/app/views/incidents/_incident.html.erb
+++ b/app/views/incidents/_incident.html.erb
@@ -1,2 +1,1 @@
-<%=h incident.address %>: <%=h incident.crime_type %> (<%= incident.crime_code %>) - <%= short_time_ago_in_words(incident.reporteddate) %> ago
-<br />
+<li><%=h incident.address %>: <%=h incident.crime_type %> (<%= incident.crime_code %>) - <%= short_time_ago_in_words(incident.reporteddate) %> ago</li>
