--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -1,6 +1,16 @@
-Incidents near <%= @origin %>: <br /><br />
+<% content_for :head do %>
+  <%= auto_discovery_link_tag(:rss, rss_url, :title => 'RSS Feed')%>
+<% end %>
+
+Incidents near <%= formatted_location(@origin) %>: <br /><br />
 <%- if @incidents.empty? %>
   None found.
 <%- else %>
   <%= render :partial => 'incidents/incident', :collection => @incidents %>
 <%- end %>
+
+<br />
+<%= link_to image_tag('feed-icon-14x14.png', :border => 0), rss_url %> <%= link_to 'Subscribe to RSS', rss_url %> or <%= link_to 'JSON API', json_url %>
+
+<br /><br />
+<%= render :partial => 'incidents/search' %>
