Bit more cleanup

--- a/app/views/incidents/locator.html.erb
+++ b/app/views/incidents/locator.html.erb
@@ -6,7 +6,7 @@
 	<div id="content"></div>
 
 	<br />
-  <%= render :partial => 'incidents/search', :locals => { :prompt => 'Or, enter' } %>
+  <%= render :partial => 'incidents/search' %>
 
 <script type="text/javascript" language="Javascript">
   function initialize()
