--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,12 @@
   <title>Siren Spotter</title>
   
 	<%= javascript_include_tag 'prototype' %>
-	<%= javascript_include_tag 'geo.js' %>
+  <%= javascript_include_tag 'geo.js' %>
 
   <%= yield(:head) %>
 </head>
+
+<body>
 
 <%= yield %>
 
