--- a/app/views/incidents/_incident.html.erb
+++ b/app/views/incidents/_incident.html.erb
@@ -1,1 +1,1 @@
-<li><%=h incident.address %>: <%=h incident.crime_type %> (<%= incident.crime_code %>) - <%= short_time_ago_in_words(incident.reporteddate) %> ago</li>
+<li><%=h incident.address %>: <%=h incident.crime_type %> (<%= incident.crime_category %>) - <%= short_time_ago_in_words(incident.reporteddate) %> ago</li>
