--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-  <title>Siren Spotter</title>
+  <title><%= "#{yield(:title)} -" if yield(:title) %>Siren Spotter</title>
   
 	<%= javascript_include_tag 'prototype' %>
   <%= javascript_include_tag 'geo' %>
