--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-  <title><%= "#{yield(:title)} -" if yield(:title) %>Siren Spotter</title>
+  <title><%= "#{yield(:title)} - " if yield(:title) %>RubbrNeckr</title>
   
 	<%= javascript_include_tag 'prototype' %>
   <%= javascript_include_tag 'geo' %>
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-<div id="title_header">Siren Spotter</div>
+<div id="title_header">Rubbr*Neckr</div>
 <%= yield %>
 
 </body>
