--- a/app/views/emergencies/_police_report.html.erb
+++ b/app/views/emergencies/_police_report.html.erb
@@ -1,1 +1,1 @@
-<li><strong><%=h police_report.address_formatted %></strong>: <%=h police_report.crime_type %> (<%= police_report.crime_category %>) - <%= short_time_ago_in_words(police_report.reporteddate) %> ago</li>
+<li><%= image_tag 'police.png', :style => 'margin-right: 2px' %><strong><%=h police_report.address_formatted %></strong>: <%=h police_report.crime_type %> (<%= police_report.crime_category %>) - <%= short_time_ago_in_words(police_report.reporteddate) %> ago</li>
