make header a link to /

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-<div id="title_header">Rubbr*Neckr</div>
+<div id="title_header"><%= link_to 'Rubbr*Neckr', root_url %></div>
 <%= yield %>
 
 </body>
