basic info page

--- a/app/views/emergencies/locator.html.erb
+++ b/app/views/emergencies/locator.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title do %>Seattle police & fire dispatch emergencies near you<% end %>
 
-<strong>Seattle police & fire emergencies happening right now, from your phone or computer.</strong>
+<strong>Seattle police & fire emergencies happening right now, from your phone or computer. <%= link_to 'How?', info_index_path %></strong>
 
 <br /><br />
 
